part1/1.09/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /hash
            pathType: Prefix
            backend:
              service:
                name: hashgenerator2-svc
                port:
                  number: 5555 # points to the port assigned to the hashgenerator ClusterIp service (this is inside the cluster)
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 5555 # points to the port assigned to the pingpong ClusterIp service (this is inside the cluster)

# Fanout config - https://kubernetes.io/docs/concepts/services-networking/ingress/#simple-fanout

# Pods can have the same port in different services.
# Each Pod/Service has its own IP address, you can have as many Pods/Services as you want all listening to the same port
# as long as they are on different namespaces? (paths?) - check this
# https://stackoverflow.com/questions/62734966/kubernetes-ingress-two-microservices-running-on-the-same-port
